--- a/projects/icons/DEBIAN/control
+++ b/projects/icons/DEBIAN/control
@@ -1,9 +1,9 @@
 Architecture: iphoneos-arm
 Author: Arep0
-Depiction: https://github.com/Arep0/Arep0.github.io
+Depiction: https://Arep0.github.io/depictions/?p=com.Arep0.icons
 Description: Adds Icon Images
 Maintainer: Arep0 <reponame@example.com>
 Name: icons
 Package: com.Arep0.icons
 Section: MTweaks
-Version: 1.0
+Version: 1.0.1
