--- a/projects/NsB/DEBIAN/control
+++ b/projects/NsB/DEBIAN/control
@@ -1,9 +1,9 @@
 Architecture: iphoneos-arm
 Author:  NsBm0d 
 Description: Crystal Apple Theme
-Depiction: https://Nrepo.github.io/depictions/?p=com.Nrepo.NsB
+Depiction: https://Arep0.github.io/depictions/?p=com.Arepo.NsB
 Maintainer:  NsBm0d  <NsBm0d@LIVE.com>
 Name: NsB
-Package: com.Nrepo.NsB
+Package: com.Arep0.NsB
 Section: aThemes
 Version: 1.0.2
