--- a/projects/classicxiiiWtest/DEBIAN/control
+++ b/projects/classicxiiiWtest/DEBIAN/control
@@ -1,9 +1,9 @@
 Architecture: iphoneos-arm
 Author: classicxii
-Depiction: https://Arep0.github.io/depictions/?p=com.Arep0.classicxiiiWtest
+Depiction: https://classicxiirepo.github.io/depictions/?p=com.classicxiirepo.classicxiiiWtest
 Description: classicxiiiW-Test
 Maintainer: classicxii <classicxii@tuta.io>
 Name: classicxiiiWtest
-Package: com.Arep0.classicxiiiWtest
+Package: com.classicxiirepo.classicxiiiWtest
 Section: Lockscreen Widgets
 Version: 1.0
